sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:3: error: not found: value getNombreValeurs
  var temp = getNombreValeurs()
             ^SelectBaseball:8: error: not found: value getNombreValeurs
    for (i <- j to getNombreValeurs-1) {
                   ^SelectBaseball:9: error: not found: value plusPetitQue
      if (plusPetitQue(i,temp)) {
          ^SelectBaseball:10: error: not found: value getValeur
        temp = getValeur(i)
               ^SelectBaseball:16: error: not found: value echange
      echange(temp2,j)
      ^SelectBaseball:17: error: not found: value getNombreValeurs
      temp=getNombreValeurs()
           ^