sort.baseball.SelectBaseball.scala.code
def selectionSort() {
  var finale = 0
  var temp = getNombreValeurs()
  var temp2 = 0
  var j = 0
  while (finale==0) {
    finale=1
    for (i <- j to getNombreValeurs-1) {
      if (plusPetitQue(i,temp)) {
        temp = getValeur(i)
        temp2=i
        finale=0
      }
    }
    if (finale==0) {
    	echange(temp2,j)
      temp=getNombreValeurs()
      j+=1
    }
  }
}